# bayesian-ml

./: README.md  pyproject.toml
gmm/: gmm_mle.py
